--- a/src/javasript/styles/header.css
+++ b/src/javasript/styles/header.css
@@ -1,38 +1,51 @@
 header {
-    width: 100%;
-    padding: 28px 8%;
+  width: 100%;
+  padding: 28px 8%;
 }
 #navbar {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 #nav_logo {
-    font-size: 20px;
-    color: rgb(70, 37, 31);
+  font-size: 20px;
+  color: rgb(70, 37, 31);
 }
 #nav_list {
-    display: flex;
-    list-style: none;
-    gap: 48px;
+  display: flex;
+  list-style: none;
+  gap: 48px;
 }
 #nav_item a {
-    text-decoration: none;
-    color: rgb(75, 58, 38);
-    font-weight: 600;
+  text-decoration: none;
+  color: rgb(75, 58, 38);
+  font-weight: 600;
 }
 .nav-item.active a {
-color: black;
-border-bottom: 3px solid rgb(70, 37, 31);
+  color: black;
+  border-bottom: 3px solid rgb(70, 37, 31);
 }
 #mobile_btn {
-    display: none;
+  display: none;
 }
 #mobile_menu {
-    display:none;
+  display: none;
 }
 @media screen and (max-width: 1170px) {
-    #nav_list,
-    #navbar .btn-default,
+  #nav_list,
+  #navbar .btn-default {
+    display: none;
+  }
+
+  #mobile_btn {
+    display: block;
+    border: none;
+    background-color: transparent;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  #mobile_menu.active {
+    display: flex;
+  }
 }
