--- a/src/javasript/styles/styles.css
+++ b/src/javasript/styles/styles.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: rgb(70, 131, 185);
+    background-color: rgb(124, 157, 190);
 }
 
 .btn-default {
@@ -15,14 +15,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(87, 87, 184);
+    background-color: rgb(60, 60, 116);
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
     box-shadow: 0px 0px 10px 2px rgb(0, 0, 0, 0.1); 
     cursor: pointer;
-    transition: background-colr .3s ease;
+    transition: background-color .3s ease;
 }
 .btn-default:hover {
-    background-color: bisque;
+    background-color: rgb(163, 121, 69);
 }
