--- a/src/javasript/styles/header.css
+++ b/src/javasript/styles/header.css
@@ -46,6 +46,22 @@ header {
     cursor: pointer;
   }
   #mobile_menu.active {
-    display: flex;
+    display: block;
+    flex-direction: column;
+    align-items: center;
   }
+
+#mobile_nav_list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin: 12px 0px;
 }
+#mobile_nav_list nav-item {
+  list-style: none;
+  text-align: center;
+
+}
+}
+
+
