--- a/src/javasript/styles/styles.css
+++ b/src/javasript/styles/styles.css
@@ -10,6 +10,10 @@ body {
     background-color: rgb(124, 157, 190);
 }
 
+section {
+    padding: 28px 8%;
+}
+
 .btn-default {
     border: none;
     display: flex;
@@ -26,3 +30,26 @@ body {
 .btn-default:hover {
     background-color: rgb(163, 121, 69);
 }
+.social-media-buttons {
+    display: flex;
+    gap: 18px;
+}
+.social-media-buttons a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 40px;
+    background-color: rgb(255, 255, 255);
+    font-size: 1.25rem;
+    border-radius: 10px;
+    text-decoration: none;
+    color: black;
+    box-shadow: 0px 0px 12px 4px rgb(0, 0, 0, 0.1);
+    transform: box-shadow .3s ease;
+}
+.social-media-buttons a:hover {
+    box-shadow: 0px 0px 12px 8px rgb(0, 0, 0, 0.1);
+}
+
+
