--- a/src/javasript/styles/styles.css
+++ b/src/javasript/styles/styles.css
@@ -51,5 +51,12 @@ section {
 .social-media-buttons a:hover {
     box-shadow: 0px 0px 12px 8px rgb(0, 0, 0, 0.1);
 }
+.section-title {
+    color: white;
+    font-size: 3.5rem;
+}
+.section-subtitle {
+    font-size: 2.1857rem;
+}
 
 
