--- a/src/javasript/styles/header.css
+++ b/src/javasript/styles/header.css
@@ -1,6 +1,9 @@
 header {
   width: 100%;
   padding: 28px 8%;
+  position: sticky;
+  top: 0;
+  background-color: rgb(124, 157, 190);
 }
 #navbar {
   width: 100%;
@@ -10,7 +13,7 @@ header {
 }
 #nav_logo {
   font-size: 20px;
-  color: rgb(70, 37, 31);
+  color: rgb(255, 255, 255);
 }
 #nav_list {
   display: flex;
@@ -19,12 +22,12 @@ header {
 }
 #nav_item a {
   text-decoration: none;
-  color: rgb(75, 58, 38);
+  color: rgb(248, 248, 248);
   font-weight: 600;
 }
 .nav-item.active a {
-  color: black;
-  border-bottom: 3px solid rgb(70, 37, 31);
+  color: rgb(248, 245, 245);
+  border-bottom: 3px solid rgb(0, 0, 0);
 }
 #mobile_btn {
   display: none;
