--- a/src/javasript/styles/styles.css
+++ b/src/javasript/styles/styles.css
@@ -45,7 +45,7 @@ section {
     border-radius: 10px;
     text-decoration: none;
     color: black;
-    box-shadow: 0px 0px 12px 4px rgb(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     transform: box-shadow .3s ease;
 }
 .social-media-buttons a:hover {
