--- a/src/javasript/styles/styles.css
+++ b/src/javasript/styles/styles.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    letter-spacing: 1px;
 }
 body {
     background-color: rgb(124, 157, 190);
@@ -52,11 +53,17 @@ section {
     box-shadow: 0px 0px 12px 8px rgb(0, 0, 0, 0.1);
 }
 .section-title {
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 3.5rem;
 }
 .section-subtitle {
     font-size: 2.1857rem;
+    color: aliceblue;
 }
+footer {
+    width: 100%;
+    color: black;
+}
+#footer
 
 
