--- a/src/javasript/styles/menu.css
+++ b/src/javasript/styles/menu.css
@@ -32,7 +32,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1.563rem;
-    color: azure;
+    color: rgb(255, 255, 255);
     width: 70px;
     height: 70px;
     right: -10px;
