--- a/src/javasript/styles/styles.css
+++ b/src/javasript/styles/styles.css
@@ -8,7 +8,7 @@
     letter-spacing: 1px;
 }
 body {
-    background-color: rgb(124, 157, 190);
+    background-color: #6b0800;
 }
 
 section {
@@ -20,7 +20,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(60, 60, 116);
+    background-color: rgb(223, 223, 240);
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
@@ -29,7 +29,7 @@ section {
     transition: background-color .3s ease;
 }
 .btn-default:hover {
-    background-color: rgb(163, 121, 69);
+    background-color: #6b0800;
 }
 .social-media-buttons {
     display: flex;
@@ -160,7 +160,7 @@ footer {
 #footer_copyright {
     display: flex;
     justify-content: center;
-    background-color: rgb(101, 147, 201);
+    background-color: rgb(248, 243, 243);
     font-size: 0.9rem;
     padding: 1.5rem;
     font-weight: 100;
