--- a/src/javasript/styles/menu.css
+++ b/src/javasript/styles/menu.css
@@ -1,70 +1,28 @@
-#menu {
-    display: flex;
-    flex-direction: column;
+section.sobre {
+    padding: 80px 4%;
+}
+
+section.sobre .flex {
     align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+    gap: 60px;
 }
-#dishes {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    margin-top: 32px;
+
+.sobre .txt-sobre {
+    color: #fff;
 }
-.dish {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    gap: 18px;
-    width: 25%;
-    padding: 20px;
-    background-color: aliceblue;
-    box-shadow: 0px 0px 12px 4px rgb(0, 0, 0, 0.1);
-    position: relative;
-    overflow: hidden;
+
+.sobre .txt-sobre h2 {
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 30px;
 }
-.dish-heart {
-    position: absolute;
-    background-color: rgb(161, 136, 103);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.563rem;
-    color: rgb(255, 255, 255);
-    width: 70px;
-    height: 70px;
-    right: -10px;
-    top: -10px;
-    border-radius: 25px
+
+.sobre .txt-sobre h2 span {
+    color: #00FF08;
+    display: block;
 }
-.dish-description {
-    color: rgb(2, 2, 2);
-    text-align: center;
-}
-.dish-rate i {
-    color: rgb(240, 216, 4);
-}
-.dish-price {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-@media screen and (max-width: 1170px) {
-    #dishes {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .dish {
-        width: calc(50% - 12px);
-    }
-}
-@media screen and (max-width: 600px) {
-    .dish {
-        width: 100%;
-    }
-    #menu .section-subtitle {
-        text-align: center;
-    }
+
+.sobre .txt-sobre p {
+    margin: 20px 0;
+    text-align: justify;
 }
