--- a/src/javasript/styles/patrocinadores.css
+++ b/src/javasript/styles/patrocinadores.css
@@ -1,11 +1,11 @@
-#testimonials {
+#empresas {
     min-height: calc(100vh - 91px);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 4px;
 }
-#testimonial_chef {
+#parceiros {
     width: 500px;
     height: auto;
 }
