--- a/src/javasript/styles/menu.css
+++ b/src/javasript/styles/menu.css
@@ -1,28 +1,11 @@
-section.sobre {
-    padding: 80px 4%;
+/*Estilo do topo do site*/
+section.sobre{
+    padding: 40px 4%;
 }
-
-section.sobre .flex {
+section.sobre .flex{
     align-items: center;
-    gap: 60px;
+    justify-content: center;
 }
-
-.sobre .txt-sobre {
-    color: #fff;
-}
-
-.sobre .txt-sobre h2 {
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 30px;
-}
-
-.sobre .txt-sobre h2 span {
-    color: #00FF08;
-    display: block;
-}
-
-.sobre .txt-sobre p {
-    margin: 20px 0;
-    text-align: justify;
+.flex {
+    display: flex;
 }
