--- a/2°Proposta/style.css
+++ b/2°Proposta/style.css
@@ -16,6 +16,35 @@ body{
     max-width: 1280px;
     margin: 0 auto;
 }
+
+.flex{
+   display: flex; 
+}
+
+.btn-contato button{
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: #fff;
+    border: 0;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+h2.titulo{
+    color: #fff;
+    font-size: 40px;
+    text-align: center;
+}
+
+h2.titulo span{
+    color: black;
+}
+
+.btn-contato button:hover{
+    box-shadow: 0px 0px 8px #ffffff;
+}
+
 /* ESTILO DO CABEÇALHO */
 header{
    padding: 40px 4%; 
@@ -26,7 +55,7 @@ header > .interface{
     justify-content: space-between;
 }
 header a{
-    color: #7c7c7c;
+    color: #d4bebe;
     text-decoration: none;
     display: inline-block;
     transition: .2s;
@@ -42,16 +71,76 @@ header nav ul li{
     display: inline-block;
     padding: 0 40px;
 }
-header .btn-contato button{
-    padding: 10px 40px;
-    font-size: 18px;
-    font-weight: 600;
-    background-color: #fff;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
+
+/* ESTILO DO TOPO DO SITE */
+section.topo-do-site {
+    padding: 40px 4%;
 }
 
-header .btn-contato button:hover{
-    box-shadow: 0px 0px 8px #ffffff;
+section.topo-do-site .flex {
+    align-items: center;
+    justify-content: center;
+    gap: 100 px;
 }
+
+.topo-do-site h1{
+    color: #fff;
+    font-size: 35px;
+    line-height: 40px;
+}
+
+.topo-do-site .txt-topo-site h1 span{
+    color: rgb(0, 0, 0);
+}
+
+.topo-do-site .txt-topo-site p{
+    color: #fff;
+    margin: 40px 0;
+}
+
+.topo-do-site .img-topo-site img{
+    position: relative;
+    animation: flutuar 2s ease-in-out infinite alternate;
+}
+
+@keyframes flutuar {
+    0%{
+        top: 0;
+    }
+    100%{
+        top: 30px;
+    }
+}
+
+/* ESTILO DAS ESPECIALIDADES */
+section.especialidades-box {
+    padding: 40px 4%;
+}
+section.especialidades .flex{
+    gap: 60px;
+}
+
+.especialidades .especialidades-box{
+    color: #fff;
+    padding: 40px;
+    border: 2px solid #ffffff75;
+    margin-top: 40px;
+    border-radius: 20px;
+    transition: .2s;
+}
+
+.especialidades .especialidades-box:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px #fff;
+}
+
+.especialidades .especialidades-box i{
+    font-size: 50px;
+    color: black;
+}
+
+.especialidades .especialidades-box h3{
+    font-size: 25px;
+    margin: 15px 0;
+}
+
