--- a/2°Proposta/style.css
+++ b/2°Proposta/style.css
@@ -144,3 +144,42 @@ section.especialidades .flex{
     margin: 15px 0;
 }
 
+/* ESTILO DO SOBRE */
+section.sobre{
+    padding: 40px 4%;   
+}
+
+section.sobre .flex{
+    align-items: center;
+    gap: 60px;
+}
+
+.sobre .txt-sobre{
+    color: #000000;
+}
+
+.sobre .txt-sobre h2{
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+
+.sobre .txt-sobre h2 span{
+    color: #fff;
+    display: block;
+}
+
+.sobre .txt-sobre p{
+    margin: 20px 0;
+    text-align: justify;
+}
+
+.sobre .txt-sobre .btn-social button{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background-color: #fff;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 0 10px;
+}
