--- a/3°Proposta/css/style.css
+++ b/3°Proposta/css/style.css
@@ -36,6 +36,8 @@ header{
     position: fixed;
     top: 0;
     left: 0;
+    transition: .5s;
+    z-index: 5;
 }
 
 header .interface{
@@ -44,7 +46,30 @@ header .interface{
     align-items: center;
 }
 
+/* Estilo do menu dinâmico */ 
 
+header.rolar{
+    background-color: #fff;
+    padding: 20px 0;
+    box-shadow: 0 0 8px #00000060;
+}
+
+header.rolar .menu-desktop nav ul li a{
+    color: #000;
+}
+
+header.rolar .btn-contato button{
+    border: 1px solid #000;
+    color: #000;
+}
+
+header.rolar .btn-contato button:hover{
+    background-color: #000;
+    color: #fff;
+}
+
+
+/* ----------------------- */
 header .menu-desktop nav ul{
     list-style: none;
 }
@@ -74,7 +99,7 @@ header .btn-contato button, .hero-site button, .veículos button{
     font-size: 18px;
     background-color: transparent;
     border: 1px solid #ffffff;
-    color: #000000;
+    color: #ffffff;
     cursor: pointer;
     border-radius: 30px;
     transition: .5s;
@@ -265,5 +290,51 @@ section.veículos{
 .veículos button{
     width: 220px;
     height: 60px;
+}
+
+/* Estilo Nossos parceiros */
+section.nossos-parceiros{
+    padding: 80px 0;
+}
+
+.txt-parceiros, .instrucoes{
+    display: inline-block;
+    width: 50%;
+    margin: -4px;
+    vertical-align: top;
+}
+
+.nossos-parceiros .txt-parceiros{
+    position: sticky;
+    top: 50%;
+    padding: 30px;
+}
+
+.nossos-parceiros .txt-parceiros h3{
+    font-size: 4em;
+    line-height: 70px;
+    font-weight: 200;
+}
+
+.nossos-parceiros .txt-parceiros h3 span{
+    display: block;
+    font-weight: 600;
+}
+
+.instrucoes .instru-box{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+    border: solid #000;
+}
+
+.instrucoes .instru-box img{
+    max-width: 150px;
+}
+
+.instrucoes .instru-box h4{
+   font-size: 1.5em; 
+   font-weight: 600;
 }
 
