--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -9,7 +9,7 @@
     font-style: normal; 
 }
 body{
-    background-color: #6b0800;
+    background-color: #e3e3e3;
     height: 100vh;
 }
 .interface{
@@ -42,7 +42,7 @@ h2.titulo span{
 }
 
 button:hover{
-    box-shadow: 0px 0px 8px #ffffff;
+    box-shadow: 0px 0px 8px #000000;
     transform: scale(1.05);
 }
 
@@ -56,13 +56,13 @@ header > .interface{
     justify-content: space-between;
 }
 header a{
-    color: #d4bebe;
+    color: #857777f5;
     text-decoration: none;
     display: inline-block;
     transition: .2s;
 }
 header a:hover{
-    color: #fff;
+    color: #000000;
     transform: scale(1.05);
 }
 header nav ul{
@@ -95,7 +95,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site p{
-    color: #fff;
+    color: #000000;
     margin: 40px 0;
 }
 
@@ -126,9 +126,9 @@ section.especialidades .flex{
 }
 
 .especialidades .especialidades-box{
-    color: #fff;
+    color: #000000;
     padding: 40px;
-    border: 2px solid #ffffff75;
+    border: 2px solid #00000075;
     margin-top: 40px;
     border-radius: 20px;
     transition: .2s;
@@ -136,7 +136,7 @@ section.especialidades .flex{
 
 .especialidades .especialidades-box:hover{
     transform: scale(1.05);
-    box-shadow: 0 0 20px #fff;
+    box-shadow: 0 0 20px #000000;
 }
 
 .especialidades .especialidades-box i{
@@ -169,7 +169,7 @@ section.sobre .flex{
 }
 
 .sobre .txt-sobre h2 span{
-    color: #fff;
+    color: #ffffff;
     display: block;
 }
 
